# grit-deep-dive-skeleton

./: .gitignore  BRANCHES.md  README.md  build.gradle  compose.yaml  pyproject.toml  settings.gradle
.github/: PULL_REQUEST_TEMPLATE.md
domains/cache-consistency/: README.md  acceptance.md  problem.md
domains/cache-consistency/docs/: review-rubric.md
domains/cache-consistency/scripts/: run-local.sh
domains/distributed-lock/: README.md  acceptance.md  problem.md
domains/distributed-lock/docs/: review-rubric.md
domains/distributed-lock/scripts/: run-local.sh
domains/distributed-lock/src/grit_skeleton/: __init__.py  checkout.py  inventory.py  redis_lock.py  simulate.py
domains/distributed-lock/tests/: test_distributed_lock_contract.py
domains/pubsub-to-streams/: README.md  acceptance.md  problem.md
domains/pubsub-to-streams/docs/: review-rubric.md
domains/ttl-bomb/: README.md  acceptance.md  problem.md
domains/ttl-bomb/docs/: review-rubric.md
domains/zset-explosion/: README.md  acceptance.md  problem.md
domains/zset-explosion/docs/: review-rubric.md
src/main/java/com/teamgrit/deepdive/skeleton/: CacheConsistencySkeletonApplication.java  DistributedLockSkeletonApplication.java  PubsubToStreamsSkeletonApplication.java  TtlBombSkeletonApplication.java  ZsetExplosionSkeletonApplication.java
src/main/resources/: application.yml
src/test/java/com/teamgrit/deepdive/skeleton/: CacheConsistencyContractTest.java  PubsubToStreamsContractTest.java  RedisDistributedLockContractTest.java  TtlBombContractTest.java  ZsetExplosionContractTest.java
(+28 files in other folders)
