[project]
name = "grit-deep-dive-distributed-lock"
version = "0.1.0"
description = "Grit Deep Dive Redis distributed lock skeleton"
requires-python = ">=3.11"
dependencies = [
  "pytest>=8.0.0",
  "redis>=5.0.0"
]

[tool.pytest.ini_options]
pythonpath = ["domains/distributed-lock/src"]
testpaths = ["domains/distributed-lock/tests"]
